# eventcore

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ONBOARDING.md  PLANNING.md  README.md  RELEASE_PROCESS.md  REVIEW.md  REVIEW_PLAN.md  SECURITY.md  flake.nix  release-plz.toml  rust-toolchain.toml
.beads/: beads.left.jsonl  beads.left.meta.json  issues.jsonl
.cargo/: mutants.toml
.claude/: CLAUDE.md  sdlc.yaml  settings.json  settings.local.json
.claude/rules/: adrs.md  (+10 more)
.github/: pull_request_template.md
blueprints/: projection-system.md  store-backends.md
docs/: ARCHITECTURE.md  PLANNING.md  RELEASE_PROCESS.md  REQUIREMENTS_ANALYSIS.md
eventcore/: CHANGELOG.md  Cargo.toml
eventcore-bench/: Cargo.toml
eventcore-benchmarks/: CHANGELOG.md  Cargo.toml
eventcore-examples/: CHANGELOG.md  Cargo.toml
eventcore-macros/: CHANGELOG.md  Cargo.toml
eventcore-memory/: CHANGELOG.md  Cargo.toml
eventcore-memory/src/: lib.rs
eventcore-postgres/: CHANGELOG.md  Cargo.toml
eventcore-postgres/migrations/: 0004_add_global_sequence.sql
eventcore-postgres/src/: lib.rs
eventcore-postgres/tests/: i005_connection_test.rs  i010_contract_suite_test.rs  i011_observability_test.rs  i012_atomic_multi_stream_test.rs  i013_concurrency_retry_test.rs  i014_postgres_internals_test.rs  i014_schema_migration_test.rs  postgres_coordinator_heartbeat_test.rs
eventcore-postgres/tests/common/: mod.rs
eventcore-sqlite/: CHANGELOG.md  Cargo.toml  README.md
eventcore-stress/: Cargo.toml
eventcore-testing/: CHANGELOG.md  Cargo.toml
eventcore-testing/src/: assertions.rs  chaos.rs  contract.rs  event_collector.rs  lib.rs  scenario.rs
eventcore-testing/tests/: chaos_mode_test.rs  event_reader_contract_suite.rs  event_store_contract_suite.rs  unified_contract_suite_test.rs
eventcore-types/: CHANGELOG.md  Cargo.toml
src/: command.rs  errors.rs  lib.rs  store.rs  subscription.rs  validation.rs
tests/: I-001-single_stream-command_test.rs  I-003-retry_policy_test.rs  I-004-multi_stream_atomic_test.rs  I-006-command_derive_macro_test.rs  I-007-dynamic_stream_discovery_test.rs  I-010-chaos_mode_test.rs  I-017-subscription_foundation_test.rs  I-043-subscription_observability_test.rs  (+1 more)
(+121 files in other folders)
