[package]
name = "eventcore-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
eventcore = { version = "0.1.8", path = ".." }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[dev-dependencies]
eventcore-testing = { path = "../eventcore-testing" }
futures = "0.3"
tokio = { version = "1.48.0", default-features = false, features = ["macros", "rt-multi-thread"] }
