[package]
name = "eventcore-testing"
version = "0.1.0"
edition = "2024"

[lints.rust]
warnings = "deny"

[dependencies]
eventcore = { path = ".." }
futures = "0.3"
mutants = "0.0.3"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.19.0", features = ["v7"] }
